@@ -1,6 +1,15 @@
 v3.7.1-rc.1 (XXXX-XX-XX)
 ------------------------
 
+* Allow removal of existing schemas by saving a schema of either `null` or `{}`
+  (empty object). Using an empty string as schema will produce  an error in the
+  web interface and will not remove the schema.
+
+  The change also adjusts the behavior for the SCHEMA_VALIDATE AQL function in
+  case the first parameter was no document/object. In this case, the function
+  will now return nulland register a warning in the query, so the user can
+  handle it.
+
 * The Web UI is now reporting errors properly in case of editing ArangoSearch
   Views with invalid properties.
 
